<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="TEAM A"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/counterA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="50dp"
                />
            <Button
                android:id="@+id/threePt_button"
                android:background="#ffa500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threePt_button"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/twoPt_button"
                android:layout_width="match_parent"
                android:background="#ffa500"
                android:layout_height="wrap_content"
                android:text="@string/twoPt_button"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/freeThrow_button"
                android:layout_width="match_parent"
                android:background="#ffa500"
                android:layout_height="wrap_content"
                android:text="@string/freeThrow_button"
                android:layout_margin="8dp"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#000">


        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="TEAM B"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/counterB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="50dp"
                />
            <Button
                android:id="@+id/threePt_buttonB"
                android:background="#ffa500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threePt_button"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/twoPt_buttonB"
                android:background="#ffa500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twoPt_button"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/freeThrow_buttonB"
                android:background="#ffa500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/freeThrow_buttonB"
                android:layout_margin="8dp"/>



        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="#ffa500"
        android:text="@string/reset_button" />



</RelativeLayout>